# deltabot-cli-py

./: .gitignore  .prospector.yaml  README.md  pylama.ini  pyproject.toml
.github/workflows/: python-ci.yml
deltabot_cli/: __init__.py  _utils.py  cli.py  client.py  const.py  events.py  rpc.py  utils.py
docs/: api.rst  conf.py  create-xdc.sh  index.rst  manifest.toml
examples/: echobot.py  echobot_advanced.py  send_and_exit.py
simplebot_aio/: __init__.py  _utils.py  cli.py
