[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "deltabot-cli"
description = "Library to speedup Delta Chat bot development"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["deltachat", "bot", "deltabot-cli"]
authors = [
  {name = "adbenitez", email = "adbenitez@hispanilandia.net"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
dependencies = [
    "deltachat-rpc-server>=1.133.2",
    "appdirs>=1.4.4",
    "rich>=12.6.0",
    "qrcode>=7.4.2",
]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "isort",
  "pylint",
  "pylama",
  "pytest",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
